# houndex-py

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  pypi-release.yml
scripts/: cleanroom_guard.py
src/houndex/: __init__.py
supabase/: config.toml
