[project]
name = "houndex"
version = "0.1.3"
description = "A storage-decoupled, last-mile RAG framework: typed output envelopes, tenant-aware evidence stores, citation verification, and pluggable storage adapters."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "llm",
    "ai",
    "ai-agents",
    "genai",
    "citations",
    "evidence",
    "provenance",
    "grounding",
    "hallucination",
    "knowledge-base",
    "knowledge-graph",
    "vector-search",
    "embeddings",
    "reranking",
    "verification",
    "source-backed",
    "supabase",
    "convex",
    "pydantic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "httpx>=0.28",
]
cli = [
    "typer>=0.12",
]
storage-convex = [
    "convex>=0.6.0",
]
storage-supabase = [
    "supabase>=2.0.0",
]
storage = [
    "convex>=0.6.0",
    "supabase>=2.0.0",
]
all = [
    "convex>=0.6.0",
    "fastapi>=0.115",
    "httpx>=0.28",
    "supabase>=2.0.0",
    "typer>=0.12",
]

[project.scripts]
houndex = "houndex_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/houndex",
    "packages/core/src/houndex_core",
    "packages/pipeline/src/houndex_pipeline",
    "packages/storage-local/src/houndex_storage_local",
    "packages/storage-convex/src/houndex_storage_convex",
    "packages/storage-supabase/src/houndex_storage_supabase",
    "packages/evals/src/houndex_evals",
    "packages/cli/src/houndex_cli",
    "packages/connectors/src/houndex_connectors",
    "packages/surface-api/src/houndex_surface_api",
]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/src",
    "/packages/*/README.md",
    "/packages/*/src",
]

[dependency-groups]
dev = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pytest>=8",
    "ruff>=0.6",
    "typer>=0.12",
    "ty>=0.0.1a8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["packages"]

[tool.ty.environment]
extra-paths = [
    "src",
    "packages/core/src",
    "packages/pipeline/src",
    "packages/storage-local/src",
    "packages/storage-convex/src",
    "packages/storage-supabase/src",
    "packages/evals/src",
    "packages/cli/src",
    "packages/connectors/src",
    "packages/surface-api/src",
]
